# tmpQmlCharts

./: CMakeLists.txt  Main.qml  MyCharts.qml  README.md  main.cpp
